# zedis

./: .gitignore  CMakeLists.txt  README.md  dockerfile
benchmarks/: compare_summary.txt  redis_throughput.txt  tests_output.txt  zedis_only_summary.txt  zedis_throughput.txt
include/: affinity.h  append_log.h  arena.h  btree.h  conn.h  event_loop.h  hash_table.h  key_registry.h  order_book.h  resp.h  ring_buffer.h  server.h  slab.h  zedis.h
scripts/: bench_compare.sh  bench_zedis_only.sh  run_tests.sh
src/: affinity.c  append_log.c  arena.c  btree.c  conn.c  event_loop.c  hash_table.c  key_registry.c  main.c  order_book.c  resp.c  ring_buffer.c  server.c  slab.c
tests/: test_ds.c  test_resp.c
